upload page contacto + css correspondiente

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <h4 class="title_footer">Contacto</h4>
             <p class="mb-3 ps-5 link_redSocial"><a href="#"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a></p>
             <p class="mb-3 ps-5"><i class="fa-solid fa-phone"></i> +54 9 11 123456789</p> 
-            <p class="mb-1 ps-5"><i class="fa-solid fa-at"></i><a class="link_consu" href="#"> Consultanos</a></p>
+            <p class="mb-1 ps-5"><i class="fa-solid fa-at"></i><a class="link_consu" href="./pages/contacto.html"> Consultanos</a></p>
         </div>
         <div class="f_school">
             <h4 class="title_footer">UNTREF School</h4>
