--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         
         <div class="f_contacto">
             <h4 class="title_footer">Contacto</h4>
-            <p class="mb-3 ps-5 link_redSocial"><a href="#"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a></p>
+            <p class="mb-3 ps-5 link_redSocial"><a href="https://wa.me/1XXXXXXXXXX" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a></p>
             <p class="mb-3 ps-5"><i class="fa-solid fa-phone"></i> +54 9 11 123456789</p> 
             <p class="mb-1 ps-5"><i class="fa-solid fa-at"></i><a class="link_consu" href="./pages/contacto.html"> Consultanos</a></p>
         </div>
